Fix the overflowing div

--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ input[type="text"] {
 
 .section-2 {
   text-align: center;
+  width: 100%;
 }
 
 .steps-item {
